<resources>
    <string name="app_name">03-Activitys</string>
    <string name="head_team_a">TEAM A</string>
    <string name="action_add_gol">+1 Gol</string>
    <string name="head_team_b">TEAM B</string>
    <string name="action_save">guardar</string>
    <string name="text_winner">ganador</string>
    <string name="text_losser">Perdedor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Team_a">TEAM A</string>
    <string name="Team_b">TEAM B</string>
    <string name="action_next">next</string>
</resources>